Clean up the code and simplification
