# swagger.json
@@ -537,11 +537,37 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "id": {
+                  "type": "number"
+                },
+                "follow_id": {
+                  "type": "number"
+                },
+                "target_id": {
+                  "type": "number"
+                },
+                "acceptanced": {
+                  "type": "boolean"
+                },
+                "followed_at": {
                   "type": "string"
                 },
-                "email": {
+                "acceptanced_at": {
                   "type": "string"
+                },
+                "user": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "number"
+                    },
+                    "email": {
+                      "type": "string"
+                    },
+                    "name": {
+                      "type": "string"
+                    }
+                  }
                 }
               }
             }
@@ -578,7 +604,14 @@
             "schema": {
               "type": "object",
               "properties": {
+                "id": {
+                  "type": "number",
+                  "description": "user_id"
+                },
                 "email": {
+                  "type": "string"
+                },
+                "name": {
                   "type": "string"
                 }
               }
@@ -654,6 +687,14 @@
             "schema": {
               "type": "object",
               "properties": {
+                "id": {
+                  "type": "number",
+                  "description": "table_pk_id"
+                },
+                "user_id": {
+                  "type": "number",
+                  "description": "user_id"
+                },
                 "email": {
                   "type": "string"
                 },
@@ -726,6 +767,7 @@
             "name": "id",
             "in": "path",
             "type": "string",
+            "description": "table_pk_id",
             "required": true
           },
           {
